--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
       </div>
     </section>
   </nav>
-  <section class="wrapper-content">
+  <section class="wrapper-content content">
     <aside class="profile">
       <img src="images/avatar-go.png" alt="Avatar" class="avatar">
       <h1>Go Language</h1>
       <span>@GoLanguage</span>
-      <p>Go is an open source programming language that makes it easy to build simple, reliable, and efficient software.</p>
+      <p>Go is an open source programming language that makes it easy to build simple, reliable, and efficient software.
+      </p>
       <ul class="info-list">
         <li><img src="/images/place.svg" alt="Place">Cidade, País</li>
         <li><img src="/images/link.svg" alt="Place">site.com</li>
@@ -87,20 +88,63 @@
       <div class="widget images">
         <strong><img src="/images/image.svg" alt="Images"> 266 Photos and videos</strong>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
       </div>
     </aside>
     <section class="timeline">
       timeline
     </section>
     <aside class="widgets">
-      widgets
+      <div class="widget follow">
+        <div class="title">
+          <strong>Who to follow</strong>
+          <a href="">Refresh</a>
+          <a href="">View all</a>
+        </div>
+        <ul>
+          <li>
+            <section class="profile">
+              <img src="/images/avatar-go.png" alt="Avatar">
+              <div class="info">
+                <strong>Spade <span>@spade_be</span></strong>
+                <button>Follow</button>
+              </div>
+            </section>
+            <a href="">x</a>
+          </li>
+          <li>
+            <section class="profile">
+              <img src="/images/avatar-go.png" alt="Avatar">
+              <div class="info">
+                <strong>Spade <span>@spade_be</span></strong>
+                <button>Follow</button>
+              </div>
+            </section>
+            <a href="">x</a>
+          </li>
+          <li>
+            <section class="profile">
+              <img src="/images/avatar-go.png" alt="Avatar">
+              <div class="info">
+                <strong>Spade <span>@spade_be</span></strong>
+                <button>Follow</button>
+              </div>
+            </section>
+            <a href="">x</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="widget trends">
+
+
+      </div>
     </aside>
   </section>
 
