--- a/index.html
+++ b/index.html
@@ -1,153 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="styles.css" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles.css" />
+    <title>Twitter</title>
+  </head>
 
-  <title>Twitter</title>
-</head>
-
-<body>
-  <header id="main-header">
-    <section class="content">
-      <nav>
-        <ul>
-          <li><img src="/images/home.svg" alt="Home"> Home</li>
-          <li><img src="/images/notification.svg" alt="Notications"> Notifications</li>
-          <li><img src="/images/message.svg" alt="Messages"> Messages</li>
-        </ul>
-      </nav>
-      <img src="/images/twitter.svg" alt="Logo Twitter">
-      <div class="side">
-        <input placeholder="Search on Twitter" type="text">
-        <img src="/images/avatar-go.png" alt="Avatar">
-        <button>Tweet</button>
-      </div>
-    </section>
-  </header>
-  <section class="banner">
-    <h1>Twitter Go Language</h1>
-  </section>
-  <nav class="bar">
-    <section class="content">
-      <ul>
-        <li class="active">
-          <span>Tweets</span>
-          <strong>1253</strong>
-        </li>
-        <li>
-          <span>Followings</span>
-          <strong>350</strong>
-        </li>
-        <li>
-          <span>Followers</span>
-          <strong>84</strong>
-        </li>
-        <li>
-          <span>Favorites</span>
-          <strong>23</strong>
-        </li>
-      </ul>
-      <div class="actions">
-        <button>Follow</button>
-        <img src="/images/more.svg" alt="More">
-      </div>
-    </section>
-  </nav>
-  <section class="wrapper-content content">
-    <aside class="profile">
-      <img src="images/avatar-go.png" alt="Avatar" class="avatar">
-      <h1>Go Language</h1>
-      <span>@GoLanguage</span>
-      <p>Go is an open source programming language that makes it easy to build simple, reliable, and efficient software.
-      </p>
-      <ul class="info-list">
-        <li><img src="/images/place.svg" alt="Place">Cidade, País</li>
-        <li><img src="/images/link.svg" alt="Place">site.com</li>
-        <li><img src="/images/clock.svg" alt="Place">Apbril, 24</li>
-        <li><img src="/images/baby.svg" alt="Place">Data de nascimento</li>
-      </ul>
-      <div class="widget followers">
-        <strong><img src="/images/user.svg" alt="Followers"> 73 followers that you know</strong>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </div>
-      <div class="widget images">
-        <strong><img src="/images/image.svg" alt="Images"> 266 Photos and videos</strong>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </div>
-    </aside>
-    <section class="timeline">
-      timeline
-    </section>
-    <aside class="widgets">
-      <div class="widget follow">
-        <div class="title">
-          <strong>Who to follow</strong>
-          <a href="">Refresh</a>
-          <a href="">View all</a>
+  <body>
+    <header id="main-header">
+      <section class="content">
+        <nav>
+          <ul>
+            <li><img src="/images/home.svg" alt="Home" /> Home</li>
+            <li>
+              <img src="/images/notification.svg" alt="Notications" />
+              Notifications
+            </li>
+            <li><img src="/images/message.svg" alt="Messages" /> Messages</li>
+          </ul>
+        </nav>
+        <img src="/images/twitter.svg" alt="Logo Twitter" />
+        <div class="side">
+          <input placeholder="Search on Twitter" type="text" />
+          <img src="/images/avatar-go.png" alt="Avatar" />
+          <button>Tweet</button>
         </div>
+      </section>
+    </header>
+    <section class="banner">
+      <h1>Twitter Go Language</h1>
+    </section>
+    <nav class="bar">
+      <section class="content">
         <ul>
-          <li>
-            <section class="profile">
-              <img src="/images/avatar-go.png" alt="Avatar">
-              <div class="info">
-                <strong>Spade <span>@spade_be</span></strong>
-                <button>Follow</button>
-              </div>
-            </section>
-            <a href="">x</a>
+          <li class="active">
+            <span>Tweets</span>
+            <strong>1253</strong>
           </li>
           <li>
-            <section class="profile">
-              <img src="/images/avatar-go.png" alt="Avatar">
-              <div class="info">
-                <strong>Spade <span>@spade_be</span></strong>
-                <button>Follow</button>
-              </div>
-            </section>
-            <a href="">x</a>
+            <span>Followings</span>
+            <strong>350</strong>
           </li>
           <li>
-            <section class="profile">
-              <img src="/images/avatar-go.png" alt="Avatar">
-              <div class="info">
-                <strong>Spade <span>@spade_be</span></strong>
-                <button>Follow</button>
-              </div>
-            </section>
-            <a href="">x</a>
+            <span>Followers</span>
+            <strong>84</strong>
+          </li>
+          <li>
+            <span>Favorites</span>
+            <strong>23</strong>
           </li>
         </ul>
-      </div>
+        <div class="actions">
+          <button>Follow</button>
+          <img src="/images/more.svg" alt="More" />
+        </div>
+      </section>
+    </nav>
+    <section class="wrapper-content content">
+      <aside class="profile">
+        <img src="images/avatar-go.png" alt="Avatar" class="avatar" />
+        <h1>Go Language</h1>
+        <span>@GoLanguage</span>
+        <p>
+          Go is an open source programming language that makes it easy to build
+          simple, reliable, and efficient software.
+        </p>
+        <ul class="info-list">
+          <li><img src="/images/place.svg" alt="Place" />Cidade, País</li>
+          <li><img src="/images/link.svg" alt="Place" />site.com</li>
+          <li><img src="/images/clock.svg" alt="Place" />Apbril, 24</li>
+          <li><img src="/images/baby.svg" alt="Place" />Data de nascimento</li>
+        </ul>
+        <div class="widget followers">
+          <strong
+            ><img src="/images/user.svg" alt="Followers" /> 73 followers that
+            you know</strong
+          >
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="widget images">
+          <strong
+            ><img src="/images/image.svg" alt="Images" /> 266 Photos and
+            videos</strong
+          >
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </aside>
+      <section class="timeline">
+        <nav>
+          <a href="" class="active">Tweets</a>
+          <a href="">Tweets and Replace</a>
+          <a href="">medias</a>
+        </nav>
+        <ul class="tweets">
+          <li>
+            <img src="/images/avatar-go.png" alt="Avatar" />
+            <div class="info">
+              <strong>
+                Go Language
+                <span>@GoLanguage</span>
+              </strong>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500
+              </p>
+              <div class="actions">
+                <a href=""
+                  ><img src="/images/comments.svg" alt="Comments" />3</a
+                >
+                <a href=""><img src="/images/refresh.svg" alt="Refresh" />4</a>
+                <a href=""><img src="/images/heart.svg" alt="Like" />5</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar-go.png" alt="Avatar" />
+            <div class="info">
+              <strong>
+                Go Language
+                <span>@GoLanguage</span>
+              </strong>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500
+              </p>
+              <div class="actions">
+                <a href=""
+                  ><img src="/images/comments.svg" alt="Comments" />3</a
+                >
+                <a href=""><img src="/images/refresh.svg" alt="Refresh" />4</a>
+                <a href=""><img src="/images/heart.svg" alt="Like" />5</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar-go.png" alt="Avatar" />
+            <div class="info">
+              <strong>
+                Go Language
+                <span>@GoLanguage</span>
+              </strong>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500
+              </p>
+              <div class="actions">
+                <a href=""
+                  ><img src="/images/comments.svg" alt="Comments" />3</a
+                >
+                <a href=""><img src="/images/refresh.svg" alt="Refresh" />4</a>
+                <a href=""><img src="/images/heart.svg" alt="Like" />5</a>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <aside class="widgets">
+        <div class="widget follow">
+          <div class="title">
+            <strong>Who to follow</strong>
+            <a href="">Refresh</a>
+            <a href="">View all</a>
+          </div>
+          <ul>
+            <li>
+              <section class="profile">
+                <img src="/images/avatar-go.png" alt="Avatar" />
+                <div class="info">
+                  <strong>Go Language <span>@GoLanguage</span></strong>
+                  <button>Follow</button>
+                </div>
+              </section>
+              <a href="">x</a>
+            </li>
+            <li>
+              <section class="profile">
+                <img src="/images/avatar-go.png" alt="Avatar" />
+                <div class="info">
+                  <strong>Go Language <span>@GoLanguage</span></strong>
+                  <button>Follow</button>
+                </div>
+              </section>
+              <a href="">x</a>
+            </li>
+            <li>
+              <section class="profile">
+                <img src="/images/avatar-go.png" alt="Avatar" />
+                <div class="info">
+                  <strong>Go Language <span>@GoLanguage</span></strong>
+                  <button>Follow</button>
+                </div>
+              </section>
+              <a href="">x</a>
+            </li>
+          </ul>
+        </div>
 
-      <div class="widget trends">
-
-
-      </div>
-    </aside>
-  </section>
-
-</body>
-
+        <div class="widget trends"></div>
+      </aside>
+    </section>
+  </body>
 </html>
